# tictactoe-ai

./: .gitignore  CMakeLists.txt  README.md
include/: AIPlayer.h  GameBoard.h  TicTacToeGame.h
src/: AIPlayer.cpp  GameBoard.cpp  TicTacToeGame.cpp  main.cpp
